@@ -2,10 +2,19 @@
   $config = array (
       # Language for SiFiEx to be displayed
     language 		=> "en",
+
     theme		=> "default",
+
       # two examples for date format - the last one will be used
     dateFormat 		=> "F d Y H:i:s",
     dateFormat 		=> "Y-m-d H:i:s",
+
+      # maximum filename displayed in the list of files
+      # filename will be shortend in display if it's longer
+      # than this value
+      # this value refers _only_ to the display, the filename itself
+      # is not touched
+    maxFilenameLength	=> 30,
 
     mailSenderName	=> "SiFiEx",
     mailSenderEmail	=> "yourEmail@example.com",
